# world-cup-ai-simulator

./: .gitignore  README.md  knockout_bracket.py  knockout_engine.py  knockout_results.py  pyproject.toml  requirements.txt  test_knockout_bracket.py
.github/workflows/: keepalive.yml  update-results.yml
cache/: __init__.py  group_analysis_cache.json  narration_cache.py
data/sample/: groups.csv  matches 2.csv  matches.csv  results.csv  teams.csv
pre-wc-predictions/: predictions-20260611T193315Z-5000-sims-seed-42.csv  predictions-20260611T193315Z-5000-sims-seed-42.json  projected-group-winners.csv
scripts/: keepalive.py  update_results.py
src/app/: archive_app.py  navigation.py  streamlit_app.py  ui_components.py
src/app/pages/: 20_Archive_·_Live_Scorecard.py  20_Live_Scorecard.py  21_Archive_·_Live_Tournament_Tracker.py  21_Live_Tournament_Tracker.py  22_Archive_·_Game_Predictions.py  22_Game_Predictions.py  24_Team_Deep-Dive.py  (+5 more)
src/data/: load_data.py  results_updater.py  sync_results.py
src/features/: build_features.py
src/genai/: analyst_agent.py  prompt_templates.py
src/models/: elo.py  match_predictor.py  poisson_model.py
src/simulation/: game_predictions.py  live_scorecard.py  live_tracker.py  prediction_store.py  tournament_simulator.py
tests/: test_bracket_page.py  test_data_quality.py  test_decided_from_results.py  test_elo.py  test_game_predictions.py  test_keepalive.py  test_knockout_match_fn.py  test_live_tracker.py  test_narration_cache.py  test_prediction_store.py  test_results_updater.py  test_simulator.py  test_streamlit_navigation.py
