[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "world-cup-ai-simulator"
version = "0.1.0"
description = "World Cup prediction engine with Monte Carlo simulator and Claude analyst layer"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "streamlit>=1.35.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
